--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "angular-cli-ghpages": "^0.6.2",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
