--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
